--- a/primera/app/src/main/res/layout/activity_main.xml
+++ b/primera/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,17 @@
         android:layout_marginTop = "40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <ImageView
+        android:id="@+id/userImg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/user"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toTopOf="@+id/message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <TextView
         android:id="@+id/message"
         android:gravity="center"
